# hashes

./: .gitattributes  .gitignore  .travis.yml  .typos.toml  Cargo.toml  README.md  SECURITY.md  build_nostd.sh  test_features.sh  test_hashes.sh
ascon-hash/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
ascon-hash/benches/: hash.rs
ascon-hash/src/: lib.rs
ascon-hash/tests/: kats_tests.rs
ascon-hash/tests/data/: asconhash.txt  asconxof.txt
ascon-xof128/: CHANGELOG.md  Cargo.toml  README.md
ascon-xof128/benches/: mod.rs
ascon-xof128/src/: block_api.rs  consts.rs  cxof.rs  lib.rs  reader.rs  xof.rs
ascon-xof128/src/block_api/: cxof.rs  reader.rs  xof.rs
ascon-xof128/tests/: mod.rs
ascon-xof128/tests/data/: ascon_cxof128_kat.blb  (+1 more)
bash-hash/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
bash-hash/benches/: mod.rs
bash-hash/src/: block_api.rs  lib.rs  oids.rs  serialize.rs  variants.rs
bash-hash/tests/: mod.rs
belt-hash/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
belt-hash/benches/: mod.rs
belt-hash/src/: block_api.rs  lib.rs
belt-hash/tests/: mod.rs
benches/: Cargo.toml
benches/src/: ascon-hash.rs
blake/: Cargo.toml
blake/src/: consts.rs  lib.rs  tests.rs
blake/tests/: lib.rs
blake2/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
blake2/benches/: blake2b.rs  blake2bp.rs  blake2s.rs  blake2sp.rs  lib.rs
blake2/examples/: blake2b512sum.rs  blake2b_sum.rs  blake2s256sum.rs  blake2s_sum.rs
blake2/src/: as_bytes.rs  blake2.rs  blake2b.rs  blake2bp.rs  blake2s.rs  blake2sp.rs  blake2x.rs  compressor_b.rs  compressor_s.rs  consts.rs  lib.rs  macros.rs  simd.rs  simdty.rs
blake2/tests/: blake2x.rs  fuzz_many.rs  lib.rs  mac.rs  mod.rs  persona.rs  reference_comparison.rs  unkeyed.rs  vector_tests.rs  xof.rs
crc32/: Cargo.toml
crc32/benches/: lib.rs
crc32/examples/: crc32.rs
crc32/src/: consts.rs  lib.rs
crc32/tests/: lib.rs
cshake/: CHANGELOG.md  Cargo.toml  README.md
cshake/benches/: mod.rs
cshake/src/: lib.rs
cshake/tests/: cshake.rs
fsb/: .gitignore  CHANGELOG.md  Cargo.toml  Notes.md  README.md
fsb/benches/: mod.rs
fsb/examples/: main.rs  padding.rs
fsb/src/: block_api.rs  fsb.rs  lib.rs  macros.rs  pi.rs  utils.rs
fsb/tests/: lib.rs  mod.rs
gost94/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
gost94/benches/: lib.rs  mod.rs
gost94/examples/: gost94_cryptopro_sum.rs  gost94_test_sum.rs
gost94/src/: block_api.rs  cryptopro.rs  gost94.rs  gost94_core.rs  lib.rs  macros.rs  params.rs  s2015.rs  test_param.rs
gost94/tests/: lib.rs  mod.rs
groestl/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
groestl/benches/: groestl256.rs  groestl512.rs  mod.rs
groestl/src/: block_api.rs  compress1024.rs  compress512.rs  compress_long.rs  compress_short.rs  consts.rs  groestl.rs  lib.rs  macros.rs  matrix.rs  state.rs  table.rs
groestl/tests/: lib.rs  mod.rs
grostl/: Cargo.toml
grostl/src/: grostl.rs  lib.rs  matrix.rs
grostl/tests/: lib.rs
has160/: Cargo.toml
has160/benches/: digest_bench.rs
has160/src/: block_api.rs  compress.rs  consts.rs  lib.rs
has160/tests/: vectors.rs
jh/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
jh/benches/: digest_bench.rs  jh.rs  machine.rs
jh/src/: block_api.rs  compressor.rs  consts.rs  jh_sse2_opt64.c  lib.rs
jh/tests/: lib.rs  mod.rs
k12/: CHANGELOG.md  Cargo.toml  README.md
k12/benches/: kt128.rs  kt256.rs  lib.rs  mod.rs
k12/src/: block_api.rs  consts.rs  custom.rs  lanes.rs  lib.rs  node_turbo_shake.rs  reader.rs  turbo_shake.rs  update.rs  utils.rs
k12/tests/: lib.rs  mod.rs
kupyna/: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
kupyna/benches/: mod.rs
kupyna/src/: block_api.rs  compress1024.rs  compress512.rs  consts.rs  lib.rs  long.rs  long_compress.rs  main.rs  short.rs  short_compress.rs  table.rs  tables.rs  utils.rs
kupyna/tests/: kup256.rs  kup384.rs  kup48.rs  kup512.rs  mod.rs
m14/: CHANGELOG.md  Cargo.toml  README.md
m14/src/: lib.rs
m14/tests/: mod.rs
md2/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
md2/benches/: lib.rs  mod.rs
md2/examples/: md2sum.rs
md2/src/: block_api.rs  consts.rs  lib.rs  lib.rs.bk
md2/tests/: lib.rs  mod.rs
md4/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
md4/benches/: lib.rs  mod.rs
md4/examples/: md4sum.rs
md4/src/: block_api.rs  compress.rs  lib.rs
md4/tests/: lib.rs  mod.rs
md5/: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  build.rs
md5/benches/: lib.rs
md5/examples/: md5sum.rs
md5/src/: block_api.rs  compress.rs  consts.rs  lib.rs  utils.rs  x64.S  x86.S
md5/tests/: lib.rs  mod.rs
md6/: Cargo.toml  README.md
md6/benches/: mod.rs
md6/src/: compress.rs  consts.rs  lib.rs  md6.rs  md6_compress.rs  md6_consts.rs
md6/tests/: mod.rs
ring-digest/: Cargo.toml  LICENSE-MIT
ring-digest/src/: lib.rs
ring-digest/tests/: lib.rs
ripemd/: CHANGELOG.md  Cargo.toml  README.md
ripemd/benches/: mod.rs  ripemd160.rs  ripemd320.rs
ripemd/src/: block_api.rs  c128.rs  c160.rs  c256.rs  c320.rs  lib.rs
ripemd/tests/: lib.rs  mod.rs
ripemd160/: CHANGELOG.md  Cargo.toml  README.md
ripemd160/benches/: lib.rs
ripemd160/examples/: ripemd160sum.rs
ripemd160/src/: block.rs  lib.rs
ripemd160/tests/: lib.rs
ripemd256/: Cargo.toml  README.md
ripemd256/examples/: ripemd256sum.rs
ripemd256/src/: block.rs  lib.rs
ripemd256/tests/: lib.rs
ripemd320/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
ripemd320/benches/: lib.rs
ripemd320/examples/: ripemd320sum.rs
ripemd320/src/: block.rs  lib.rs
ripemd320/tests/: lib.rs
sha1/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
sha1-checked/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
sha1-checked/src/: compress.rs  lib.rs  ubc_check.rs
sha1-checked/tests/: mod.rs
sha1/benches/: lib.rs  mod.rs
sha1/examples/: sha1sum.rs
sha1/src/: aarch64.S  aarch64.rs  block_api.rs  checked.rs  compress.rs  consts.rs  lib.rs  utils.rs  x64.S  x86.S
sha1/tests/: lib.rs  mod.rs
(+600 files in other folders)
