[workspace]
resolver = "3"
members = [
    "ascon-hash",
    "belt-hash",
    "blake2",
    "fsb",
    "gost94",
    "groestl",
    "jh",
    "k12",
    "kupyna",
    "md2",
    "md4",
    "md5",
    "ripemd",
    "sha1",
    "sha1-checked",
    "sha2",
    "sha3",
    "shabal",
    "skein",
    "sm3",
    "streebog",
    "tiger",
    "whirlpool",
]

[profile.dev]
opt-level = 2

[patch.crates-io]
sha1 = { path = "sha1" }
sha3 = { path = "sha3" }
whirlpool = { path = "whirlpool" }

# https://github.com/RustCrypto/utils/pull/1187
blobby = { git = "https://github.com/RustCrypto/utils" }
# https://github.com/RustCrypto/traits/pull/1916
digest = { git = "https://github.com/RustCrypto/traits", branch = "const_blobby" }
