[workspace]
resolver = "3"
members = [
    "ascon-hash256",
    "bash-hash",
    "belt-hash",
    "blake2",
    "fsb",
    "gost94",
    "groestl",
    "jh",
    "k12",
    "kupyna",
    "md2",
    "md4",
    "md5",
    "ripemd",
    "sha1",
    "sha1-checked",
    "sha2",
    "sha3",
    "shabal",
    "skein",
    "sm3",
    "streebog",
    "tiger",
    "whirlpool",
]

[profile.dev]
opt-level = 2

[patch.crates-io]
sha1 = { path = "sha1" }
sha3 = { path = "sha3" }
whirlpool = { path = "whirlpool" }

keccak = { git = "https://github.com/RustCrypto/sponges" }
crypto-common = { git = "https://github.com/RustCrypto/traits", branch = "block_sizes" }
digest = { git = "https://github.com/RustCrypto/traits", branch = "block_sizes" }
