[package]
name = "ascon-hash"
version = "0.3.0-pre"
description = "Implementation of the Ascon and AsconA hashes and XOFs"
authors = [
    "Sebastian Ramacher <sebastian.ramacher@ait.ac.at>",
    "RustCrypto Developers",
]
license = "Apache-2.0 OR MIT"
readme = "README.md"
edition = "2021"
documentation = "https://docs.rs/ascon-hash"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "hash", "ascon"]
categories = ["cryptography", "no-std"]
rust-version = "1.71"

[dependencies]
digest = { version = "=0.11.0-pre.8", default-features = false, features = ["core-api"] }
ascon = { version = "0.4", default-features = false }

[dev-dependencies]
spectral = { version = "0.6", default-features = false }
hex = "0.4"
hex-literal = "0.4"
base16ct = { version = "0.2", features = ["alloc"] }

[features]
default = ["std"]
std = ["digest/std"]
zeroize = ["ascon/zeroize", "digest/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
