[package]
name = "ascon-xof128"
version = "0.5.0-rc.2"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/ascon-hash256"
readme = "README.md"
repository = "https://github.com/RustCrypto/hashes"
license = "Apache-2.0 OR MIT"
keywords = ["hash", "ascon"]
categories = ["cryptography", "no-std"]
description = "Implementation of Ascon-XOF128"

[dependencies]
digest = "0.11"
ascon = "0.5"

[dev-dependencies]
digest = { version = "0.11", features = ["dev"] }
hex-literal = "1"

[features]
default = ["alloc"]
alloc = ["digest/alloc"]
zeroize = ["digest/zeroize"]

[package.metadata.docs.rs]
all-features = true
