[package]
name = "ascon-xof128"
version = "0.1.0"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/ascon-hash256"
readme = "README.md"
repository = "https://github.com/RustCrypto/hashes"
license = "Apache-2.0 OR MIT"
keywords = ["hash", "ascon"]
categories = ["cryptography", "no-std"]
description = "Implementation of Ascon-XOF128 and Ascon-СXOF128"

[dependencies]
digest = { version = "0.11", default-features = false }
ascon = "0.5"
sponge-cursor = "0.1"

[dev-dependencies]
digest = { version = "0.11", default-features = false, features = ["dev"] }
hex-literal = "1"

[features]
default = ["alloc"]
alloc = ["digest/alloc"]
zeroize = ["digest/zeroize", "sponge-cursor/zeroize"]

[package.metadata.docs.rs]
all-features = true
