[package]
name = "belt-hash"
version = "0.2.0-pre.1"
description = "BelT hash function (STB 34.101.31-2020)"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.71"
documentation = "https://docs.rs/belt-hash"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "belt", "stb", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = "=0.11.0-pre.6"
belt-block = { version = "0.1.1", default-features = false }

[dev-dependencies]
digest = { version = "=0.11.0-pre.6", features = ["dev"] }
hex-literal = "0.4"

[features]
default = ["oid", "std"]
std = ["digest/std"]
oid = ["digest/oid"]
