[package]
name = "blake"
version = "0.1.0"
authors = ["Kaz Wesley <keziahw@gmail.com>"]
license = "MIT/Apache-2.0"
description = "BLAKE hash functions"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "blake", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
block-buffer = "0.3"
byte-tools = "0.2"
digest = { version = "^0.7.1", features = ["dev"] }

[badges]
travis-ci = { repository = "RustCrypto/hashes" }
