[package]
name = "blake"
version = "0.2.0"
authors = ["Kaz Wesley <keziahw@gmail.com>"]
license = "MIT/Apache-2.0"
description = "BLAKE hash functions"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "blake", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
block-buffer = "0.7"
digest = "0.8"

[badges]
travis-ci = { repository = "RustCrypto/hashes" }
