[package]
name = "crc-32"
version = "0.1.0"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
description = "CRC32 hash function"
documentation = "https://docs.rs/crc-32"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "crc32", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
byte-tools = "0.2"
block-buffer = "0.3"
digest = { version = "0.6", optional=true}
generic-array = { version = "0.8", optional=true}

[dev-dependencies]
crypto-tests = "0.5"

[features]
generic = ["generic-array", "digest"]
default = ["generic"]

[badges]
travis-ci = { repository = "RustCrypto/hashes" }
