[package]
name = "fsb"
version = "0.2.0-pre"
description = "FSB hash function"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/fsb"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["fsb", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = "0.11.0-rc.5"
whirlpool = { version = "0.11.0-rc.1", default-features = false }

[dev-dependencies]
digest = { version = "0.11.0-rc.5", features = ["dev"] }
hex-literal = "1"
base16ct = { version = "0.3", features = ["alloc"] }

[features]
default = ["alloc"]
alloc = ["digest/alloc"]
zeroize = ["digest/zeroize"]

[package.metadata.docs.rs]
all-features = true
