[package]
name = "groestl"
version = "0.10.1"
description = "Grøstl hash function"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/groestl"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "groestl", "grostl", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = "0.10.3"

[dev-dependencies]
digest = { version = "0.10.3", features = ["dev"] }
hex-literal = "0.4.1"

[features]
default = ["std"]
std = ["digest/std"]
