[package]
name = "jh"
version = "0.2.0-rc.1"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/jh"
readme = "README.md"
repository = "https://github.com/RustCrypto/hashes"
license = "MIT OR Apache-2.0"
keywords = ["jh", "hash", "digest"]
categories = ["cryptography", "no-std"]
description = "Pure Rust implementation of the JH cryptographic hash function"

[dependencies]
digest = "0.11"
hex-literal = "1"
simd = { package = "ppv-lite86", version = "0.2.6" }

[dev-dependencies]
digest = { version = "0.11", features = ["dev"] }

[features]
default = ["alloc"]
alloc = ["digest/alloc"]
zeroize = ["digest/zeroize"]

[package.metadata.docs.rs]
all-features = true
