[package]
name = "k12"
version = "0.4.0-pre"
description = "Pure Rust implementation of the KangarooTwelve hash function"
authors = ["RustCrypto Developers", "Diggory Hardy <github1@dhardy.name>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/k12"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = "0.11.0-rc.5"
sha3 = { version = "0.11.0-rc.1", default-features = false }

[dev-dependencies]
digest = { version = "0.11.0-rc.5", features = ["alloc", "dev"] }
hex-literal = "1"

[features]
default = ["alloc"]
alloc = ["digest/alloc"]
zeroize = ["digest/zeroize", "sha3/zeroize"]

[package.metadata.docs.rs]
all-features = true
