[package]
name = "k12"
version = "0.4.0-rc.1"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/k12"
readme = "README.md"
repository = "https://github.com/RustCrypto/hashes"
license = "Apache-2.0 OR MIT"
keywords = ["hash", "digest"]
categories = ["cryptography", "no-std"]
description = "Pure Rust implementation of the KangarooTwelve hash function"

[dependencies]
digest = "0.11"
turbo-shake = { version = "0.1.0", default-features = false }

[dev-dependencies]
digest = { version = "0.11", features = ["alloc", "dev"] }
hex-literal = "1"

[features]
default = ["alloc"]
alloc = ["digest/alloc"]
zeroize = ["digest/zeroize", "turbo-shake/zeroize"]

[package.metadata.docs.rs]
all-features = true
