[package]
name = "k12"
version = "0.4.0"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/k12"
readme = "README.md"
repository = "https://github.com/RustCrypto/hashes"
license = "Apache-2.0 OR MIT"
keywords = ["hash", "digest"]
categories = ["cryptography", "no-std"]
description = "Implementation of the KangarooTwelve family of extendable-output functions"

[dependencies]
digest = { version = "0.11", default-features = false }
keccak = { version = "0.2", features = ["parallel"] }
sponge-cursor = "0.1"

[dev-dependencies]
digest = { version = "0.11", default-features = false, features = ["alloc", "dev"] }
hex-literal = "1"

[features]
default = ["alloc"]
alloc = ["digest/alloc"]
zeroize = ["digest/zeroize"]

[package.metadata.docs.rs]
all-features = true
