[package]
name = "kupyna"
version = "0.1.0-pre.0"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/kupyna"
readme = "README.md"
repository = "https://github.com/RustCrypto/hashes"
license = "MIT OR Apache-2.0"
keywords = ["hash", "kupyna"]
categories = ["cryptography", "no-std"]
description = "Kupyna (DSTU 7564:2014) hash function"

[dependencies]
digest = "0.11"

[dev-dependencies]
digest = { version = "0.11", features = ["dev"] }
hex-literal = "1"

[features]
default = ["alloc"]
alloc = ["digest/alloc"]
zeroize = ["digest/zeroize"]

[package.metadata.docs.rs]
all-features = true
