[package]
name = "md2"
version = "0.11.0-pre"
license = "MIT OR Apache-2.0"
authors = ["RustCrypto Developers"]
description = "MD2 hash function"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/md2"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "md2", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = "=0.11.0-pre.10"

[dev-dependencies]
digest = { version = "=0.11.0-pre.10", features = ["dev"] }
hex-literal = "1"
base16ct = { version = "0.2", features = ["alloc"] }

[features]
default = ["oid", "std"]
std = ["digest/std"]
oid = ["digest/oid"]
zeroize = ["digest/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
