[package]
name = "md4"
version = "0.11.0-pre"
description = "MD4 hash function"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
documentation = "https://docs.rs/md4"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "md4", "hash", "digest"]
categories = ["cryptography", "no-std"]
rust-version = "1.71"

[dependencies]
digest = "=0.11.0-pre.8"

[dev-dependencies]
digest = { version = "=0.11.0-pre.8", features = ["dev"] }
hex-literal = "0.4"

[features]
default = ["oid", "std"]
std = ["digest/std"]
oid = ["digest/oid"]
zeroize = ["digest/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
