[package]
name = "md-5"
version = "0.11.0-pre.1"
description = "MD5 hash function"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
documentation = "https://docs.rs/md-5"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "md5", "hash", "digest"]
categories = ["cryptography", "no-std"]
rust-version = "1.72"

[lib]
name = "md5"

[dependencies]
digest = "=0.11.0-pre.6"
cfg-if = "1"

[dev-dependencies]
digest = { version = "=0.11.0-pre.6", features = ["dev"] }
hex-literal = "0.4"

[features]
default = ["oid", "std"]
std = ["digest/std"]
oid = ["digest/oid"] # Enable OID support
zeroize = ["digest/zeroize"]
force-soft = [] # Force software implementation

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
