[package]
name = "md-5"
version = "0.11.0"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/md-5"
readme = "README.md"
repository = "https://github.com/RustCrypto/hashes"
license = "MIT OR Apache-2.0"
keywords = ["md5", "hash", "digest"]
categories = ["cryptography", "no-std"]
description = "MD5 hash function"

[lib]
name = "md5"

[dependencies]
digest = "0.11"
cfg-if = "1"

[dev-dependencies]
digest = { version = "0.11", features = ["dev"] }
hex-literal = "1"

[features]
default = ["alloc", "oid"]
alloc = ["digest/alloc"]
oid = ["digest/oid"] # Enable OID support
zeroize = ["digest/zeroize"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(md5_backend, values("soft"))'] }

[package.metadata.docs.rs]
all-features = true
