[package]
name = "ring-digest"
version = "0.8.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "RIPEMD-160 hash function"
documentation = "https://docs.rs/ring-digest"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "ring", "hash", "digest", "sha1", "sha2", "SHA-1", "SHA-256", "SHA-384", "SHA-512", "SHA-512/256"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = { version = "0.8", features = ["std"] }
opaque-debug = "0.2"
ring = "0.14"

[features]
default = ["std"]
std = ["digest/std"]

[badges]
travis-ci = { repository = "RustCrypto/hashes" }
